apps/matrix/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-db
spec:
  selector:
    matchLabels:
      app: synapse-db
  serviceName: synapse-db
  template:
    metadata:
      labels:
        app: synapse-db
    spec:
      containers:
        - image: docker.io/library/postgres:12.5-alpine
          imagePullPolicy: Always
          name: synapse-db
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
