apps/matrix/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-synapse
spec:
  selector:
    matchLabels:
      app: matrix-synapse
  serviceName: matrix-synapse
  template:
    metadata:
      labels:
        app: matrix-synapse
    spec:
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      containers:
        - image: docker.io/matrixdotorg/synapse:v1.27.0
          name: synapse
          ports:
            - containerPort: 8008
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 250Mi
          volumeMounts:
            - mountPath: /data
              name: matrix-synapse-config
            - mountPath: /data/media_store
              name: media-store
            - mountPath: /appservices/mautrix-whatsapp
              name: matrix-whatsapp-registration
            - mountPath: /appservices/mautrix-signal
              name: matrix-signal-registration
            - mountPath: /appservices/matrix-irc
              name: matrix-irc-registration
      volumes:
        - name: matrix-synapse-config
          configMap:
            name: matrix-synapse-config
        - name: matrix-whatsapp-registration
          configMap:
            name: matrix-whatsapp-registration
        - name: matrix-signal-registration
          configMap:
            name: matrix-signal-registration
        - name: matrix-irc-registration
          configMap:
            name: matrix-irc-registration
  volumeClaimTemplates:
    - metadata:
        name: media-store
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-db
spec:
  selector:
    matchLabels:
      app: matrix-db
  serviceName: matrix-db
  template:
    metadata:
      labels:
        app: matrix-db
    spec:
      containers:
        - image: docker.io/library/postgres:13.2-alpine
          name: matrix-db
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: postgres
            - mountPath: /docker-entrypoint-initdb.d
              name: matrix-db-init
      volumes:
        - name: matrix-db-init
          configMap:
            name: matrix-db-init
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
