apps/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
spec:
  ports:
    - port: 8008
  selector:
    app: matrix-synapse
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-db
spec:
  selector:
    app: matrix-db
  ports:
    - port: 5432
