apps/matrix/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
spec:
  selector:
    app: matrix-synapse
  ports:
    - port: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-db
spec:
  selector:
    app: matrix-db
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
spec:
  selector:
    app: synapse-admin
  ports:
    - port: 8080
