apps/matrix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - matrix.hubbe.club
  rules:
    - host: matrix.hubbe.club
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: synapse-web
              port:
                number: 8008
---
# federation delegation needs a route /.well-known/matrix/server for the matrix server name (hubbe.club)
# easiest way to do that is to just have an Ingress for it with a snippet for the actual data
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-federation
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location /.well-known/matrix/server {
        default_type application/json;
        return 200 '{"m.server": "matrix.hubbe.club:443"}';
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hubbe.club
  rules:
    - host: hubbe.club
